# beamterm

./: .cliffignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  SEMVER.md  build.zsh  cliff.toml  release.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  quick-test.yml  release.yml
beamterm-atlas/: Cargo.toml  README.md
beamterm-atlas/src/: atlas_generator.rs  bitmap_font.rs  cli.rs  coordinate.rs  dump_png.rs  font_discovery.rs  font_preview_main.rs  generator.rs  glyph_bounds.rs  glyph_rasterizer.rs  glyph_set.rs  grapheme.rs  lib.rs  logging.rs  main.rs  raster_config.rs  verify_atlas_main.rs
beamterm-atlas/src/font_preview/: app.rs  block_render.rs  event.rs  input_multiplexer.rs  input_processor.rs  mod.rs  theme.rs  tui.rs  ui.rs
beamterm-atlas/src/font_preview/widgets/: font_display.rs  font_selector.rs  mod.rs  parameter_input.rs
beamterm-core/: Cargo.toml
beamterm-core/examples/: native_terminal.rs
beamterm-core/src/: error.rs  lib.rs  position.rs  url.rs
beamterm-core/src/gl/: atlas.rs  buffer.rs  cell_query.rs  context.rs  dirty_regions.rs  dynamic_atlas.rs  glyph_cache.rs  glyph_rasterizer.rs  mod.rs  native_dynamic_atlas.rs  program.rs  renderer.rs  selection.rs  static_atlas.rs  terminal_grid.rs  texture.rs  ubo.rs
beamterm-core/src/shaders/: cell.frag  cell.vert
beamterm-core/tests/: enumerate_emojis_crate.rs  width_vs_emoji.rs
beamterm-data/: Cargo.toml  README.md
beamterm-data/atlas/: additional-symbols.txt  bitmap_font.atlas
beamterm-data/src/: atlas.rs  cell_size.rs  glyph.rs  lib.rs  serialization.rs  terminal_size.rs
beamterm-rasterizer/: Cargo.toml
beamterm-rasterizer/benches/: rasterize.rs
beamterm-rasterizer/src/: error.rs  font_discovery.rs  font_fallback.rs  lib.rs  metrics.rs  rasterizer.rs
beamterm-renderer/: Cargo.toml  rasterizer_test.html
beamterm-renderer/src/: error.rs  js.rs  lib.rs  mouse.rs  terminal.rs  url.rs  wasm.rs
beamterm-renderer/src/gl/: atlas.rs  canvas_rasterizer.rs  cell_query.rs  context.rs  context_loss.rs  dynamic_atlas.rs  glyph_cache.rs  mod.rs  program.rs  renderer.rs  selection.rs  static_atlas.rs  terminal_grid.rs  texture.rs  ubo.rs
beamterm-renderer/src/shaders/: cell.frag  cell.vert
beamterm-unicode/: Cargo.toml
beamterm-unicode/src/: lib.rs
beamterm-unicode/tests/: enumerate_emojis_crate.rs
docs/: architecture.puml  buffer_architecture.puml
examples/canvas_waves/: Cargo.toml  index.html
examples/canvas_waves/src/: main.rs  wave_effect.rs
examples/game-console/: Cargo.toml
examples/game-console/src/: main.rs
examples/native-terminal/: Cargo.toml
examples/native-terminal/src/: main.rs
examples/terminal-emulator/: Cargo.toml  README.md
examples/terminal-emulator/src/: app.rs  color.rs  gl.rs  input.rs  main.rs  terminal.rs
js/: .gitignore  .npmrc  README.md  package-lock.json  package.json
js/examples/: landing-page.html
js/examples/api-demo/: README.md  index.html  main.js  package-lock.json  package.json
js/examples/selection-demo/: index.html  main.js  package-lock.json  package.json
js/examples/vite/: README.md  index.html  package-lock.json  package.json
js/examples/vite/src/: main.ts
js/examples/webpack/: package-lock.json  package.json
js/examples/webpack/src/: index.js
js/scripts/: build-examples.js
scripts/: build-wasm.zsh  setup-js.zsh
tools/font-preview/: Cargo.toml
tools/font-preview/src/: app.rs  event.rs  input_multiplexer.rs  input_processor.rs  main.rs  tui.rs  ui.rs
tools/font-preview/src/widgets/: font_display.rs  font_selector.rs  mod.rs  parameter_input.rs
