[workspace]
resolver = "2"
members = [
    "beamterm-atlas",
    "beamterm-data",
    "beamterm-renderer",
]
exclude = [
    "examples/canvas_waves",
]

[workspace.package]
version = "0.14.0"
edition = "2024"
license = "MIT"
authors = ["Adrian Papari <junkdog@angelhill.net>"]
repository = "https://github.com/junkdog/beamterm"
homepage = "https://github.com/junkdog/beamterm"
documentation = "https://docs.rs/beamterm"
keywords = ["terminal", "webgl", "wasm", "rendering", "gpu"]
categories = ["graphics", "wasm", "web-programming"]

[workspace.dependencies]
bitflags = "2.10"
compact_str = "0.9.0"
console_error_panic_hook = "0.1.7"
emojis = "0.8.0"
js-sys = "0.3.81"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2", features = ["core"] }
wasm-bindgen = { version = "0.2.106" }
web-sys = "0.3.81"
web-time = "1.1.0"

[workspace.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "deny"
unused_imports = "deny"
unused_mut = "allow"
unused_assignments = "allow"

[workspace.lints.clippy]
inefficient_to_string = "warn"
large_enum_variant = "warn"
manual_string_new = "warn"
needless_collect = "warn"

needless_return = "warn"
redundant_closure_for_method_calls = "warn"
type_complexity = "warn"
