[package]
name = "beamterm-atlas"
description = "Font atlas generator for beamterm WebGL terminal renderer, creating GPU-optimized texture arrays from TTF/OTF fonts"
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
beamterm-data = { path = "../beamterm-data", version = "0.14.0" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.5"
colored = "3.1.1"
cosmic-text = "0.16.0"
directories = "6.0.0"
emojis.workspace = true
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
unicode-segmentation = { workspace = true }
itertools = "0.14.0"
compact_str.workspace = true
unicode-width.workspace = true
fontdb = "0.23.0"

[[bin]]
name = "beamterm-atlas"
path = "src/main.rs"

[[bin]]
name = "verify-atlas"
path = "src/verify_atlas_main.rs"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

# Exclude generated atlas files and build artifacts
[package.metadata.cargo-machete]
ignored = ["color-eyre"]  # Used in main.rs
