[package]
name = "beamterm-atlas"
description = "Font atlas generator for beamterm WebGL terminal renderer, creating GPU-optimized texture arrays from TTF/OTF fonts"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
beamterm-data = { path = "../beamterm-data", version = "0.18.0" }
beamterm-rasterizer = { path = "../beamterm-rasterizer", version = "0.18.0" }
beamterm-unicode = { path = "../beamterm-unicode", version = "0.18.0" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.5"
directories = "6.0.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-appender = "0.2.4"
unicode-segmentation = { workspace = true }
compact_str.workspace = true
unicode-width.workspace = true
png = "0.18.1"

[[bin]]
name = "beamterm-atlas"
path = "src/main.rs"


[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

# Exclude generated atlas files and build artifacts
[package.metadata.cargo-machete]
ignored = ["color-eyre"]  # Used in main.rs
