[package]
name = "beamterm-core"
description = "Platform-agnostic OpenGL terminal renderer using glow"
readme = "../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

[features]
default = []
native-dynamic-atlas = ["dep:beamterm-rasterizer"]

[dependencies]
bitflags.workspace = true
beamterm-data = { path = "../beamterm-data", version = "0.18.0" }
beamterm-rasterizer = { path = "../beamterm-rasterizer", version = "0.18.0", optional = true }
compact_str = { workspace = true }
thiserror = { workspace = true }
unicode-width.workspace = true
glow.workspace = true
lru = "0.16"
rustc-hash = "2.1.1"

[dev-dependencies]
emojis = "0.8.0"

[lints]
workspace = true
