[package]
name = "beamterm-rasterizer"
description = "Native font rasterization for beamterm using swash + fontdb"
readme = "../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
beamterm-data = { path = "../beamterm-data", version = "0.18.0" }
fontdb = { version = "0.23", features = ["memmap", "fontconfig"] }
swash = "0.2"
thiserror.workspace = true
unicode-width.workspace = true

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "rasterize"
harness = false

[lints]
workspace = true
