[package]
name = "canvas-waves"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
ratzilla = { git = "https://github.com/orhun/ratzilla", branch = "main" }
# ratzilla = { path = "../../../ratzilla" }
console_error_panic_hook = "0.1.7"
tachyonfx = { version = "0.25.0", default-features = false, features = ["wasm"] }
web-time = "1.1.0"
web-sys = { version = "0.3", features = ["Window", "Location", "UrlSearchParams"] }

